--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -19,12 +19,12 @@
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page when looking at its layout. The point of using Lorem Ipsum is that it has a
                             more-or-less normal distribution of letters, as opposed to using </p>
-                        <a class="read_more" href="Javascript:void(0)">Raed More</a>
+                        <a class="read_more" href="Javascript:void(0)">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-7">
                     <div class="about_img">
-                        <figure><img src="images/about.jpg" alt="#" /></figure>
+                        <figure><img src="../../assets/images/about.jpg" alt="#" /></figure>
                     </div>
                 </div>
             </div>
