--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -24,33 +24,33 @@
                 <div class="col-sm-12">
                     <div class="row">
                         <div class="col-sm-6 col-md-4">
-                            <a class="gallery_img" href="images/gallery1.jpg">
-                                <img src="images/gallery1.jpg" alt="Bridge">
+                            <a class="gallery_img" href="../../assets/images/gallery1.jpg">
+                                <img src="../../assets/images/gallery1.jpg" alt="Bridge">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="gallery_img" href="images/gallery2.jpg">
-                                <img src="images/gallery2.jpg" alt="Bridge">
+                            <a class="gallery_img" href="../../assets/images/gallery2.jpg">
+                                <img src="../../assets/images/gallery2.jpg" alt="Bridge">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="gallery_img" href="images/gallery3.jpg">
-                                <img src="images/gallery3.jpg" alt="Bridge">
+                            <a class="gallery_img" href="../../assets/images/gallery3.jpg">
+                                <img src="../../assets/images/gallery3.jpg" alt="Bridge">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="gallery_img" href="images/gallery4.jpg">
-                                <img src="images/gallery4.jpg" alt="Bridge">
+                            <a class="gallery_img" href="../../assets/images/gallery4.jpg">
+                                <img src="../../assets/images/gallery4.jpg" alt="Bridge">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="gallery_img" href="images/gallery5.jpg">
-                                <img src="images/gallery5.jpg" alt="Bridge">
+                            <a class="gallery_img" href="../../assets/images/gallery5.jpg">
+                                <img src="../../assets/images/gallery5.jpg" alt="Bridge">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="gallery_img" href="images/gallery6.jpg">
-                                <img src="images/gallery6.jpg" alt="Bridge">
+                            <a class="gallery_img" href="../../assets/images/gallery6.jpg">
+                                <img src="../../assets/images/gallery6.jpg" alt="Bridge">
                             </a>
                         </div>
                     </div>
