--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-home-slide></app-home-slide>
 <app-home-about></app-home-about>
 <app-home-services></app-home-services>
 <app-home-news></app-home-news>
