--- a/src/styles.css
+++ b/src/styles.css
@@ -2,13 +2,14 @@
     box-sizing: border-box !important;
 }
 
+html {
+    scroll-behavior: smooth;
+}
 .container {
     max-width: 1170px;
 }
 
-html {
-    scroll-behavior: smooth;
-}
+
 
 body {
     color: #666666;
@@ -16,6 +17,7 @@ body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.80857;
     font-weight: normal;
+    margin: 0;
 }
 
 a {
@@ -133,38 +135,13 @@ img {
     outline: 0;
 }
 
-.btn-custom {
-    margin-top: 20px;
-    background-color: transparent !important;
-    border: 2px solid #ddd;
-    padding: 12px 40px;
-    font-size: 16px;
+img {
+    max-width: 100%;
+    height: auto;
 }
 
-.lead {
-    font-size: 18px;
-    line-height: 30px;
-    color: #767676;
-    margin: 0;
-    padding: 0;
-}
-
-.form-control:focus {
-    border-color: #ffffff !important;
-    box-shadow: 0 0 0 .2rem rgba(255, 255, 255, .25);
-}
-
-.navbar-form input {
-    border: none !important;
-}
-
-.badge {
-    font-weight: 500;
-}
-
-blockquote {
-    margin: 20px 0 20px;
-    padding: 30px;
+:focus {
+    outline: 0;
 }
 
 button {
@@ -173,4 +150,3 @@ button {
     padding: 0;
     cursor: pointer;
 }
-
