--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,11 +17,11 @@
                 <div class=" col-md-5">
                     <h3>Contact US</h3>
                     <ul class="conta">
-                        <li><i class="fa fa-map-marker" aria-hidden="true"></i>Address : Lorem Ipsum is <br>simply
+                        <li><fa-icon [icon]="faMapMarkerAlt"></fa-icon>Address : Lorem Ipsum is <br>simply
                             dummy
                         </li>
-                        <li><i class="fa fa-mobile" aria-hidden="true"></i> Phone : +(1234) 567 890</li>
-                        <li> <i class="fa fa-envelope" aria-hidden="true"></i><a [routerLink]="['']">Email :
+                        <li><fa-icon [icon]="faMobile"></fa-icon>Phone : +(1234) 567 890</li>
+                        <li><fa-icon [icon]="faEnvelope"></fa-icon> <a [routerLink]="['']">Email :
                                 demo@gmail.com</a>
                         </li>
                     </ul>
