--- a/src/app/home/home-services/home-services.component.css
+++ b/src/app/home/home-services/home-services.component.css
@@ -6,6 +6,7 @@
     background-color: #00274a;
     padding: 60px 0 30px 0;
     margin-top: 90px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .container {
