--- a/src/app/home/home-services/home-services.component.html
+++ b/src/app/home/home-services/home-services.component.html
@@ -11,17 +11,17 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="se_img">
-                    <figure><img src="../../../assets/images/service1.jpg" alt="#" /></figure>
+                    <figure><img src="../../../assets/service1.jpg" alt="#" /></figure>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="se_img">
-                    <figure><img src="../../../assets/images/service2.jpg" alt="#" /></figure>
+                    <figure><img src="../../../assets/service2.jpg" alt="#" /></figure>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="se_img">
-                    <figure><img src="../../../assets/images/service3.jpg" alt="#" /></figure>
+                    <figure><img src="../../../assets/service3.jpg" alt="#" /></figure>
                 </div>
             </div>
         </div>
