--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -38,7 +38,7 @@
     width: 100%;
     height: 90px;
     padding: 21px 0px;
-    background: url(../../assets/images/header.jpg);
+    background: url(../../assets/header.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center;
