--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
                     <div class="full">
                         <div class="center-desk">
                             <div class="logo">
-                                <a routerLink=""><img src="../assets/images/logo.png" alt="#" /></a>
+                                <a routerLink=""><img src="../assets/logo.png" alt="#" /></a>
                             </div>
                         </div>
                     </div>
