--- a/src/app/home/home-about/home-about.component.html
+++ b/src/app/home/home-about/home-about.component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="col-md-7">
                 <div class="about_img">
-                    <figure><img src="../../../assets/images/about.jpg" alt="#" /></figure>
+                    <figure><img src="../../../assets/about.jpg" alt="#" /></figure>
                 </div>
             </div>
         </div>
