--- a/src/app/home/home-trainers/home-trainers.component.html
+++ b/src/app/home/home-trainers/home-trainers.component.html
@@ -12,7 +12,7 @@
             <div class="col-md-4">
                 <div id="trai" class="trainer_box">
                     <div class="trainer_img">
-                        <figure><img src="../../../assets/images/tra.jpg" alt="#" /></figure>
+                        <figure><img src="../../../assets/tra.jpg" alt="#" /></figure>
                     </div>
                     <div class="trainer">
                         <h3>sandy Mark </h3>
@@ -23,7 +23,7 @@
             <div class="col-md-4">
                 <div id="trai" class="trainer_box">
                     <div class="trainer_img">
-                        <figure><img src="../../../assets/images/tra0.jpg" alt="#" /></figure>
+                        <figure><img src="../../../assets/tra0.jpg" alt="#" /></figure>
                     </div>
                     <div class="trainer">
                         <h3>limijack </h3>
@@ -34,7 +34,7 @@
             <div class="col-md-4">
                 <div id="trai" class="trainer_box">
                     <div class="trainer_img">
-                        <figure><img src="../../../assets/images/tra1.jpg" alt="#" /></figure>
+                        <figure><img src="../../../assets/tra1.jpg" alt="#" /></figure>
                     </div>
                     <div class="trainer">
                         <h3>smith den </h3>
