--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -23,7 +23,7 @@
        <div class="row">
           <div class="col-sm-12">
              <div class="news_img">
-                <figure><img src="../../assets/images/nes.jpg" alt="#"/></figure>
+                <figure><img src="../../assets/nes.jpg" alt="#"/></figure>
              </div>
           </div>
        </div>
