--- a/src/app/trainer/trainer.component.css
+++ b/src/app/trainer/trainer.component.css
@@ -17,7 +17,7 @@
 }
 
 .trainers {
-    background: url(../../assets/images/tra_bg.jpg);
+    background: url(../../assets/tra_bg.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 60px 0 30px 0;
